--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,7 @@ typings/
 
 # gatsby files
 .cache/
-public
+public/
 
 # Mac files
 .DS_Store
@@ -75,3 +75,4 @@ id_maikfigura.de-deployment.pub
 
 # cypress videos
 cypress/videos/
+cypress/screenshots/
