--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,css}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
@@ -15,39 +15,50 @@
     "cy:run": "cypress run",
     "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
     "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "prettier": "prettier --ignore-path .gitignore \"**/*.{js,jsx,json,md}\"",
+    "test": "jest",
+    "prettier": "prettier --ignore-path .gitignore \"**/*.{js,jsx,json,md,css}\"",
     "check-format": "npm run prettier -- --list-different",
     "lint": "eslint --ignore-path .gitignore . --ext .js,jsx",
     "validate": "npm-run-all --parallel check-format lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.13",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/styles": "^4.9.13",
+    "@types/react-transition-group": "^4.4.0",
     "gatsby": "^2.21.13",
-    "gatsby-plugin-material-ui": "^2.1.8",
+    "gatsby-plugin-postcss": "^2.3.2",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-source-filesystem": "^2.3.1",
     "gatsby-transformer-asciidoc": "^1.3.1",
-    "highlight.js": "^10.0.2",
+    "highlight.js": "^10.0.3",
+    "install": "^0.13.0",
+    "npm": "^6.14.5",
+    "postcss-import": "^12.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
+    "react-transition-group": "^4.4.1",
+    "typeface-fira-code": "^1.1.4",
     "typeface-inter": "^3.12.0"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "devDependencies": {
     "@testing-library/cypress": "^6.0.0",
+    "@testing-library/react": "^10.0.4",
+    "@types/jest": "^25.2.3",
+    "babel-jest": "^26.0.1",
+    "babel-preset-gatsby": "^0.4.6",
     "cypress": "^4.5.0",
     "cypress-axe": "^0.8.1",
     "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "start-server-and-test": "^1.11.0"
+    "react-test-renderer": "^16.13.1",
+    "start-server-and-test": "^1.11.0",
+    "tailwindcss": "^1.4.6"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "repository": {
     "type": "git",
