--- a/.huskyrc
+++ b/.huskyrc
@@ -1,5 +1,5 @@
 {
   "hooks": {
-    "pre-commit": "lint-staged && npm run build && npm run test:e2e:ci "
+    "pre-commit": "npm run clean && lint-staged && npm run build && npm run test:e2e:ci "
   }
 } 
