Used some vibe to migrate to nextjs

--- a/package.json
+++ b/package.json
@@ -1,68 +1,58 @@
 {
   "name": "maikfigura.de",
   "private": true,
-  "description": "My personal website",
-  "version": "0.1.0",
+  "description": "Personal homepage of Maik Figura - Chaos Engineer",
+  "version": "1.0.0",
   "license": "MIT",
+  "packageManager": "pnpm@9.5.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=9.0.0"
+  },
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md,css}\"",
-    "start": "npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "test:e2e": "start-server-and-test develop http://localhost:8000 cy:open",
-    "test:e2e:ci": "start-server-and-test develop http://localhost:8000 cy:run",
-    "test": "jest",
-    "prettier": "prettier --ignore-path .gitignore \"**/*.{js,jsx,json,md,css}\"",
-    "check-format": "npm run prettier -- --list-different",
-    "lint": "eslint --ignore-path .gitignore . --ext .js,jsx",
-    "validate": "npm-run-all --parallel check-format lint"
+    "dev": "next dev --turbo",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "clean": "rm -rf .next out",
+    "validate": "pnpm format:check && pnpm lint && pnpm type-check"
   },
   "dependencies": {
-    "gatsby": "^2.25.1",
-    "gatsby-plugin-postcss": "^3.0.4",
-    "gatsby-plugin-react-helmet": "^3.3.14",
-    "gatsby-source-filesystem": "^2.4.0",
-    "gatsby-transformer-asciidoc": "^1.3.15",
-    "highlight.js": "^10.3.2",
-    "install": "^0.13.0",
-    "npm": "^6.14.8",
-    "postcss-import": "^13.0.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "typeface-fira-code": "^1.1.13",
-    "typeface-inter": "^1.1.13"
+    "@types/dompurify": "3.0.5",
+    "asciidoctor": "^3.0.4",
+    "dompurify": "3.2.6",
+    "next": "^15.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@testing-library/cypress": "^7.0.1",
-    "@testing-library/react": "^11.1.0",
-    "@types/jest": "^26.0.15",
-    "babel-jest": "^26.6.2",
-    "babel-preset-gatsby": "^0.5.15",
-    "cypress": "^5.5.0",
-    "cypress-axe": "^0.10.0",
-    "husky": "^4.3.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.2",
-    "lint-staged": "^10.5.1",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "react-test-renderer": "^17.0.1",
-    "start-server-and-test": "^1.11.5",
-    "tailwindcss": "^1.9.6"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/maiksensi/maikfigura.de"
-  },
-  "bugs": {
-    "url": "https://github.com/maiksensi/maikfigura.de/issues"
+    "@axe-core/playwright": "^4.10.0",
+    "@playwright/test": "^1.48.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "@types/jsdom": "21.1.7",
+    "@types/node": "20.19.9",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.0.0",
+    "jsdom": "26.1.0",
+    "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.13",
+    "typescript": "^5.6.0",
+    "vitest": "3.2.4"
   }
 }
