--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "4.10.2",
+    "@eslint/eslintrc": "3.2.0",
     "@playwright/test": "1.54.1",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -46,7 +47,7 @@
     "@types/react-dom": "18.3.7",
     "@vitejs/plugin-react": "4.7.0",
     "autoprefixer": "10.4.21",
-    "eslint": "8.57.0",
+    "eslint": "9.31.0",
     "eslint-config-next": "15.4.3",
     "jsdom": "26.1.0",
     "postcss": "8.5.6",
