--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "license": "MIT",
   "packageManager": "pnpm@10.24.0",
   "engines": {
-    "node": ">=22.0.0",
-    "pnpm": ">=9.0.0"
+    "node": ">=24.0.0",
+    "pnpm": ">=10.0.0"
   },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -35,7 +35,6 @@
   },
   "devDependencies": {
     "@axe-core/playwright": "4.11.0",
-    "@eslint/eslintrc": "3.3.3",
     "@playwright/test": "1.57.0",
     "@tailwindcss/postcss": "4.1.17",
     "@testing-library/jest-dom": "6.9.1",
@@ -46,6 +45,7 @@
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.1",
+    "@vitest/ui": "4.0.15",
     "autoprefixer": "10.4.22",
     "eslint": "9.39.1",
     "eslint-config-next": "16.0.7",
