--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -37,5 +37,5 @@
   ],
   "timezone": "Europe/Berlin",
   "schedule": ["before 6am"],
-  "baseBranchPatterns": ["master"]
+  "baseBranchPatterns": ["main"]
 }
